--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -151,3 +151,16 @@ body {
 .tiny-buffer {
   padding-left: 0.05rem;
 }
+
+#slab {
+  min-height:50vh;
+}
+
+#question {
+  min-height: 20rem;
+}
+@media only screen and (max-width: 640px)  {
+  #slab {
+    height:50vh;
+  }
+}
